# prj-bunyeok

./: .env.example  .gitignore  README.md  pyproject.toml
bunyeok/: __init__.py  job_store.py  main.py  translator.py
static/: styles.css
templates/: index.html
